fixed bandsite logo and hero img cropped

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -42,7 +42,7 @@
 
     &__header {
         @include primaryHeading;
-        margin: 1.6rem 0;
+        margin-top: 1.6rem;
 
         @include tablet {
             @include secondaryHeading2;
@@ -62,10 +62,6 @@
         align-items: center;
         width: 2.5rem;
         height: 2.5rem;
-
-        // @include tablet {
-        //     scale: 1.3;
-        // }
     }
 
     &__contact-container {
@@ -76,7 +72,6 @@
         @include tablet {
             display: flex;
             flex-direction: row;
-            // justify-content: space-between;
             gap: 6rem;
         }
 
@@ -108,16 +103,14 @@
         margin: 1rem 0;
     }
 
-    &__copyright-header {
-        @include primaryHeading;
-        font-weight: 400;
-        text-transform: uppercase;
-        margin: 1rem 0;
+    &__copyright-logo{
+        margin: 2rem 0 1rem;
 
         @include tablet {
+            margin: 0;
             position: absolute;
             left: 80%;
-            top: 10%;
+            top: 14%;
         }
     }
 
