--- a/styles/partials/_nav.scss
+++ b/styles/partials/_nav.scss
@@ -27,22 +27,11 @@
         }
     }
 
-    &__header h2 {
-        // @include secondaryHeading;
-        font-size: 2rem;
-        font-weight: 400;
-        color: $primary-color3;
-        text-transform: uppercase;
-        padding-bottom: 1rem;
+    &__logo {
+        margin-bottom: 1rem;
 
         @include tablet {
-            @include primaryHeading;
-            padding-bottom: 2rem;
-        }
-
-        @include desktop {
-            // @include secondaryHeading2;
-            padding-bottom: 2rem;
+            padding-bottom: 1rem;
         }
     }
 
@@ -71,12 +60,12 @@
         &:hover,
         &:active {
             border-bottom: 3px solid $primary-color3;
-            padding-bottom: 2.5rem;
+            padding-bottom: 2rem;
         }
 
         @include tablet {
             width: 7rem;
-            padding-bottom: 2.5rem;
+            padding-bottom: 2rem;
         }
 
         @include desktop {
