--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -24,8 +24,8 @@ $desktop-breakpoint: 1280px;
 $type-face: 'Avenir';
 
 // font weight
-$font-weights: (
-    'regular': 400,
-    'semi-bold': 600,
-    'bold': 700
-)
+// $font-weights: (
+//     'regular': 400,
+//     'semi-bold': 600,
+//     'bold': 700
+// )
